- Adjusted fetch chosen voting items logic